--- a/src/assets/sass/mainstyles.scss
+++ b/src/assets/sass/mainstyles.scss
@@ -1,350 +1,415 @@
-#nprogress {
-
-  .spinner {
-    top: 50% !important;
-    right: 50% !important;
-
-    .spinner-icon {
-      width: 40px !important;
-      height: 40px !important;
-      border-top-color: #0a72f4;
-      border-right-color: yellow;
-      border-bottom-color: red;
-      border-left-color: #0af4be;
-      animation-duration: 500ms;
-      border-width: 4px;
-    }
-
+body {
+  img {
+    position: absolute;
+    top: 125px;
+    left: 180px;
+    opacity: 0.1;
+    width: 70%;
   }
-}
 
-#app {
+  #nprogress {
 
-  #topApp {
+    .spinner {
+      top: 50% !important;
+      right: 50% !important;
 
-    #headRow {
-
-      #headingDiv {
-
-        h1 {
-
-        }
+      .spinner-icon {
+        width: 40px !important;
+        height: 40px !important;
+        border-top-color: #0a72f4;
+        border-right-color: yellow;
+        border-bottom-color: red;
+        border-left-color: #0af4be;
+        animation-duration: 500ms;
+        border-width: 4px;
       }
 
-      #loginHeader {
+    }
+  }
 
-        #emailFormGroup {
+  #app {
+
+    #topApp {
+
+      #headRow {
+
+        #headingDiv {
+
+          h1 {
+            text-align: center;
+          }
+        }
+
+        #loginHeader {
+
+          #emailFormGroup {
+            margin-top: 10px;
+
+            #emailTextInputDiv {
+
+              #emailInput {
+
+              }
+            }
+
+            #emailButtonInputDiv {
+
+              #loginButton {
+
+              }
+            }
+          }
+
+          #passwordFormGroup {
+
+            #passwordTextInputDiv {
+
+              #passwordInput {
+                margin-top: 5px;
+              }
+            }
+
+            #passwordButtonInputDiv {
+
+              #registerButton {
+
+              }
+            }
+          }
+        }
+
+        #userAccountButtons {
           margin-top: 10px;
 
-          #emailTextInputDiv {
+          #userAccountButtonsDiv {
 
-            #emailInput {
+            #myAccountButton {
 
+            }
+
+            #logOutButton {
+              margin-left: 5px;
             }
           }
 
-          #emailButtonInputDiv {
+          #accountModal {
 
-            #loginButton {
+            #accountModalDialog {
 
-            }
-          }
-        }
-
-        #passwordFormGroup {
-
-          #passwordTextInputDiv {
-
-            #passwordInput {
-              margin-top: 5px;
-            }
-          }
-
-          #passwordButtonInputDiv {
-
-            #registerButton {
-
-            }
-          }
-        }
-      }
-
-      #userAccountButtons {
-        margin-top: 10px;
-
-        #userAccountButtonsDiv {
-
-          #myAccountButton {
-
-          }
-
-          #logOutButton {
-            margin-left: 5px;
-          }
-        }
-
-        #accountModal {
-
-          #accountModalDialog {
-
-            #accountModalContent {
-              
-              #accountModalHeader {
-
-                h3 {
-                  text-align: center;
-                }
+              #accountModalContent {
                 
-                #accountModalCloseButton {
+                #accountModalHeader {
 
-                }
-              }
-
-              #accountModalBody {
-
-                #accountModalRow {
-
-                  #accountModalForm {
-
-                    #accountFormInlineName {
-
-                      #accountFormGroupName {
-                        display: flex;
-                        margin-left: 35px;
-
-                        label {
-
-                        }
-
-                        p {
-                          margin-left: 5px;
-                        }
-                      }
-                    }
-
-                    #accountFormInlineEmail {
-
-                      #accountFormGroupEmail {
-                        display: flex;
-                        margin-left: 35px;
-
-                        label {
-
-                        }
-
-                        p {
-                          margin-left: 5px;
-                        }
-
-                      }
-                    }
-
-                    #accountFormInlineNewName {
-
-                      #accountFormGroupNewName {
-
-                        #accountFormNewNameInput {
-                          margin-left: 5px;
-                        }
-                      }
-                    }
-
-                    #accountFormInlineNewEmail {
-
-                      #accountFormGroupNewEmail {
-                        margin-top: 10px;
-
-                        label {
-
-                        }
-
-                        #accountFormNewEmailInput {
-                          margin-left: 5px;
-                        }
-
-                      }
-
-                      #accountFormUpdateButton {
-                        margin-left: 5px;
-                        margin-top: 10px;
-                      }
-                    }
-
-                  }
-                }
-              }
-
-              #accountModalFooter {
-                p {
-                  text-align: center;
-                }
-
-                #resetPasswordButton {
-
-                }
-              }   
-            }
-          }
-        }
-      }
-
-    }
-
-    #bodyRow {
-      margin-top:20px;
-
-      #leftBody {
-
-        #massPanel {
-
-          p {
-
-          }
-        }
-
-        #calculationPanel {
-          display: inline-flex;
-
-          .calculatableElement {
-
-            .elemNoParen {
-
-              .elemNoParenButton {
-                display: block;
-                border: none;
-                background: none;
-
-                p {
-                  font-size: 25px;
-                  margin-bottom: 0;
-
-                  sub {
-
-                  }
-
-                  &.activeElement {
-                    color: red;
-                  }
-
-                  &.inactiveElement {
-                    color: black;
-                  }
-
-                }
-              }
-            }
-
-            .leftParen {
-              display: inline-block;
-              position: relative;
-              bottom: 15px;
-
-              p {
-                margin: 0;
-                font-size: 60px;
-              }
-            }
-
-            .elemInParen {
-              display: inline-block;
-            }
-
-            .rightParenDiv {
-              display: inline-block;
-              position: relative;
-              bottom: 15px;
-
-              .rightParen {
-                display: inline-block;
-
-                p {
-                  margin: 0;
-                  font-size: 60px;
-                }
-              }
-
-              .rightParenPM {
-                display: inline-block;
-                position: relative;
-                top: 30px;
-
-                .pp-m {
-                  display: block;
-                  margin: auto;
-                  padding: 0;
-                  width: 15px;
-                  height: 20px;
-
-                  p {
-                    margin-bottom: 0;
+                  h3 {
                     text-align: center;
                   }
+                  
+                  #accountModalCloseButton {
+
+                  }
                 }
 
-                .parenMultiplier {
+                #accountModalBody {
+
+                  #accountModalRow {
+
+                    #accountModalForm {
+
+                      #accountFormInlineName {
+
+                        #accountFormGroupName {
+                          display: flex;
+                          margin-left: 35px;
+
+                          label {
+
+                          }
+
+                          p {
+                            margin-left: 5px;
+                          }
+                        }
+                      }
+
+                      #accountFormInlineEmail {
+
+                        #accountFormGroupEmail {
+                          display: flex;
+                          margin-left: 35px;
+
+                          label {
+
+                          }
+
+                          p {
+                            margin-left: 5px;
+                          }
+
+                        }
+                      }
+
+                      #accountFormInlineNewName {
+
+                        #accountFormGroupNewName {
+
+                          #accountFormNewNameInput {
+                            margin-left: 5px;
+                          }
+                        }
+                      }
+
+                      #accountFormInlineNewEmail {
+
+                        #accountFormGroupNewEmail {
+                          margin-top: 10px;
+
+                          label {
+
+                          }
+
+                          #accountFormNewEmailInput {
+                            margin-left: 5px;
+                          }
+
+                        }
+
+                        #accountFormUpdateButton {
+                          margin-left: 5px;
+                          margin-top: 10px;
+                        }
+                      }
+
+                    }
+                  }
+                }
+
+                #accountModalFooter {
+                  p {
+                    text-align: center;
+                  }
+
+                  #resetPasswordButton {
+
+                  }
+                }   
+              }
+            }
+          }
+        }
+
+      }
+
+      #bodyRow {
+        margin-top:20px;
+
+        #leftBody {
+          background-color: rgba(29, 26, 26, 0.56);
+          width: 60%;
+          margin-left: 30px;
+
+          #massPanel {
+
+            #massPanelMolecularWeight {
+
+              h3 {
+                color: white;
+                margin-top: 15px;
+                text-align: right;
+                margin-right: 5px;
+
+              }
+            }
+
+            #massPanelButtonsDiv {
+              margin-top: 12px;
+              margin-right: 15px;
+
+              #massPanelSaveButton {
+
+              }
+
+              #massPanelClearButton {
+                margin-left: 15px;
+              }
+
+            }
+          }
+
+          #calculationPanel {
+            display: inline-flex;
+
+            #calculationPanelElements {
+              margin-left: 15px;
+              margin-bottom: 5px;
+
+              .calculatableElement {
+                margin-right: 5px;
+                margin-left: 5px;
+                margin-bottom: 10px;
+                float: left;
+                width: 55px;
+
+                .elemNoParen {
+
+                  .elemNoParenButton {
+                    display: block;
+                    border: none;
+                    background: none;
+                    margin-right: 9px;
+                    margin-left: 9px;
+                    padding: 0;
+
+                    p {
+                      font-size: 36px;
+                      margin-bottom: 0;
+
+                      sub {
+
+                      }
+
+                      &.activeElement {
+                        color: red;
+                      }
+
+                      &.inactiveElement {
+                        color: black;
+                      }
+
+                    }
+                  }
+                }
+
+                .leftParen {
+                  display: inline-block;
+                  position: relative;
+                  bottom: 15px;
 
                   p {
                     margin: 0;
-                    text-align: center;
+                    font-size: 60px;
+                  }
+                }
+
+                .elemInParen {
+                  display: inline-block;
+                }
+
+                .rightParenDiv {
+                  display: inline-block;
+                  position: relative;
+                  bottom: 15px;
+
+                  .rightParen {
+                    display: inline-block;
+
+                    p {
+                      margin: 0;
+                      font-size: 60px;
+                    }
+                  }
+
+                  .rightParenPM {
+                    display: inline-block;
+                    position: relative;
+                    top: 30px;
+
+                    .pp-m {
+                      display: block;
+                      margin: auto;
+                      padding: 0;
+                      width: 15px;
+                      height: 20px;
+
+                      p {
+                        margin-bottom: 0;
+                        text-align: center;
+                      }
+                    }
+
+                    .parenMultiplier {
+
+                      p {
+                        margin: 0;
+                        text-align: center;
+                      }
+                    }
+                  }
+                }
+
+                .elementSelected {
+                  padding: 0 5px 0 5px;
+
+                  .p-m {
+                    display: block;
+                    margin: auto;
+                    padding: 0;
+                    width: 20px;
+
+                    p {
+                      margin-bottom: 0;
+                      text-align: center;
+                    }
+                  }
+
+                  .elemInParenAcronym {
+
+                    p {
+                      font-size: 25px;
+                      margin-bottom: 0;
+                    }
                   }
                 }
               }
             }
-
-            .elementSelected {
-              padding: 0 5px 0 5px;
-
-              .p-m {
-                display: block;
-                margin: auto;
-                padding: 0;
-                width: 20px;
-
-                p {
-                  margin-bottom: 0;
-                  text-align: center;
-                }
-              }
-
-              .elemInParenAcronym {
-
-                p {
-                  font-size: 25px;
-                  margin-bottom: 0;
-                }
-              }
-            }
-          }
-        }
-      }
-
-      #rightBody {
-
-        #searchElementsRow {
-
-          #searchElementsForm {
-
-            #searchElementsInput {
-
-            }
           }
         }
 
-        #elementsPanelRow {
-          //border-top: 1px solid black;
-          border-left: 1px solid black;
-          margin-top: 4px;
+        #rightBody {
+          float: right;
 
-          .elementFoundButton {
-            border: 1px solid black;
-            border-left: none;
-            //border-top: none;
-            text-align: center;
-            padding: 0;
-            margin-bottom: 1px;
+          #searchElementsRow {
 
-            p {
+            #searchElementsForm {
 
+              #searchElementsInput {
+
+              }
+            }
+          }
+
+          #elementsPanelRow {
+            margin-top: 5px;
+            height: 418px;
+
+            .elementFoundButton {
+              border: 1px solid black;
+              padding: 0;
+              background-color: rgb(224, 212, 218);
+              padding-left: 15px;
+              padding-right: 15px;
+
+              &:hover {
+                background-color: rgb(210, 122, 166);
+              }
+
+              .elementFoundAtomicP {
+                margin: 0;
+                text-align: left;
+              }
+
+              h2 {
+                margin: 0;
+                text-align: center;
+              }
+
+              .elementFoundNameP {
+                margin: 0;
+                text-align: center;
+              }
+
+              .elementFoundMassP {
+                text-align: center;
+              }
             }
           }
         }
