--- a/src/public/allstyles.css
+++ b/src/public/allstyles.css
@@ -1,7 +1,14 @@
-#nprogress .spinner {
+body img {
+  position: absolute;
+  top: 125px;
+  left: 180px;
+  opacity: 0.1;
+  width: 70%; }
+
+body #nprogress .spinner {
   top: 50% !important;
   right: 50% !important; }
-  #nprogress .spinner .spinner-icon {
+  body #nprogress .spinner .spinner-icon {
     width: 40px !important;
     height: 40px !important;
     border-top-color: #0a72f4;
@@ -11,110 +18,154 @@
     animation-duration: 500ms;
     border-width: 4px; }
 
-#app #topApp #headRow #loginHeader #emailFormGroup {
+body #app #topApp #headRow #headingDiv h1 {
+  text-align: center; }
+
+body #app #topApp #headRow #loginHeader #emailFormGroup {
   margin-top: 10px; }
 
-#app #topApp #headRow #loginHeader #passwordFormGroup #passwordTextInputDiv #passwordInput {
+body #app #topApp #headRow #loginHeader #passwordFormGroup #passwordTextInputDiv #passwordInput {
   margin-top: 5px; }
 
-#app #topApp #headRow #userAccountButtons {
+body #app #topApp #headRow #userAccountButtons {
   margin-top: 10px; }
-  #app #topApp #headRow #userAccountButtons #userAccountButtonsDiv #logOutButton {
+  body #app #topApp #headRow #userAccountButtons #userAccountButtonsDiv #logOutButton {
     margin-left: 5px; }
-  #app #topApp #headRow #userAccountButtons #accountModal #accountModalDialog #accountModalContent #accountModalHeader h3 {
+  body #app #topApp #headRow #userAccountButtons #accountModal #accountModalDialog #accountModalContent #accountModalHeader h3 {
     text-align: center; }
-  #app #topApp #headRow #userAccountButtons #accountModal #accountModalDialog #accountModalContent #accountModalBody #accountModalRow #accountModalForm #accountFormInlineName #accountFormGroupName {
+  body #app #topApp #headRow #userAccountButtons #accountModal #accountModalDialog #accountModalContent #accountModalBody #accountModalRow #accountModalForm #accountFormInlineName #accountFormGroupName {
     display: flex;
     margin-left: 35px; }
-    #app #topApp #headRow #userAccountButtons #accountModal #accountModalDialog #accountModalContent #accountModalBody #accountModalRow #accountModalForm #accountFormInlineName #accountFormGroupName p {
+    body #app #topApp #headRow #userAccountButtons #accountModal #accountModalDialog #accountModalContent #accountModalBody #accountModalRow #accountModalForm #accountFormInlineName #accountFormGroupName p {
       margin-left: 5px; }
-  #app #topApp #headRow #userAccountButtons #accountModal #accountModalDialog #accountModalContent #accountModalBody #accountModalRow #accountModalForm #accountFormInlineEmail #accountFormGroupEmail {
+  body #app #topApp #headRow #userAccountButtons #accountModal #accountModalDialog #accountModalContent #accountModalBody #accountModalRow #accountModalForm #accountFormInlineEmail #accountFormGroupEmail {
     display: flex;
     margin-left: 35px; }
-    #app #topApp #headRow #userAccountButtons #accountModal #accountModalDialog #accountModalContent #accountModalBody #accountModalRow #accountModalForm #accountFormInlineEmail #accountFormGroupEmail p {
+    body #app #topApp #headRow #userAccountButtons #accountModal #accountModalDialog #accountModalContent #accountModalBody #accountModalRow #accountModalForm #accountFormInlineEmail #accountFormGroupEmail p {
       margin-left: 5px; }
-  #app #topApp #headRow #userAccountButtons #accountModal #accountModalDialog #accountModalContent #accountModalBody #accountModalRow #accountModalForm #accountFormInlineNewName #accountFormGroupNewName #accountFormNewNameInput {
+  body #app #topApp #headRow #userAccountButtons #accountModal #accountModalDialog #accountModalContent #accountModalBody #accountModalRow #accountModalForm #accountFormInlineNewName #accountFormGroupNewName #accountFormNewNameInput {
     margin-left: 5px; }
-  #app #topApp #headRow #userAccountButtons #accountModal #accountModalDialog #accountModalContent #accountModalBody #accountModalRow #accountModalForm #accountFormInlineNewEmail #accountFormGroupNewEmail {
+  body #app #topApp #headRow #userAccountButtons #accountModal #accountModalDialog #accountModalContent #accountModalBody #accountModalRow #accountModalForm #accountFormInlineNewEmail #accountFormGroupNewEmail {
     margin-top: 10px; }
-    #app #topApp #headRow #userAccountButtons #accountModal #accountModalDialog #accountModalContent #accountModalBody #accountModalRow #accountModalForm #accountFormInlineNewEmail #accountFormGroupNewEmail #accountFormNewEmailInput {
+    body #app #topApp #headRow #userAccountButtons #accountModal #accountModalDialog #accountModalContent #accountModalBody #accountModalRow #accountModalForm #accountFormInlineNewEmail #accountFormGroupNewEmail #accountFormNewEmailInput {
       margin-left: 5px; }
-  #app #topApp #headRow #userAccountButtons #accountModal #accountModalDialog #accountModalContent #accountModalBody #accountModalRow #accountModalForm #accountFormInlineNewEmail #accountFormUpdateButton {
+  body #app #topApp #headRow #userAccountButtons #accountModal #accountModalDialog #accountModalContent #accountModalBody #accountModalRow #accountModalForm #accountFormInlineNewEmail #accountFormUpdateButton {
     margin-left: 5px;
     margin-top: 10px; }
-  #app #topApp #headRow #userAccountButtons #accountModal #accountModalDialog #accountModalContent #accountModalFooter p {
+  body #app #topApp #headRow #userAccountButtons #accountModal #accountModalDialog #accountModalContent #accountModalFooter p {
     text-align: center; }
 
-#app #topApp #bodyRow {
+body #app #topApp #bodyRow {
   margin-top: 20px; }
-  #app #topApp #bodyRow #leftBody #calculationPanel {
-    display: inline-flex; }
-    #app #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .elemNoParen .elemNoParenButton {
-      display: block;
-      border: none;
-      background: none; }
-      #app #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .elemNoParen .elemNoParenButton p {
-        font-size: 25px;
-        margin-bottom: 0; }
-        #app #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .elemNoParen .elemNoParenButton p.activeElement {
-          color: red; }
-        #app #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .elemNoParen .elemNoParenButton p.inactiveElement {
-          color: black; }
-    #app #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .leftParen {
-      display: inline-block;
-      position: relative;
-      bottom: 15px; }
-      #app #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .leftParen p {
-        margin: 0;
-        font-size: 60px; }
-    #app #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .elemInParen {
-      display: inline-block; }
-    #app #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .rightParenDiv {
-      display: inline-block;
-      position: relative;
-      bottom: 15px; }
-      #app #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .rightParenDiv .rightParen {
-        display: inline-block; }
-        #app #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .rightParenDiv .rightParen p {
-          margin: 0;
-          font-size: 60px; }
-      #app #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .rightParenDiv .rightParenPM {
-        display: inline-block;
-        position: relative;
-        top: 30px; }
-        #app #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .rightParenDiv .rightParenPM .pp-m {
-          display: block;
-          margin: auto;
-          padding: 0;
-          width: 15px;
-          height: 20px; }
-          #app #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .rightParenDiv .rightParenPM .pp-m p {
-            margin-bottom: 0;
-            text-align: center; }
-        #app #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .rightParenDiv .rightParenPM .parenMultiplier p {
-          margin: 0;
-          text-align: center; }
-    #app #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .elementSelected {
-      padding: 0 5px 0 5px; }
-      #app #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .elementSelected .p-m {
-        display: block;
-        margin: auto;
+  body #app #topApp #bodyRow #leftBody {
+    background-color: rgba(29, 26, 26, 0.56);
+    width: 60%;
+    margin-left: 30px; }
+    body #app #topApp #bodyRow #leftBody #massPanel #massPanelMolecularWeight h3 {
+      color: white;
+      margin-top: 15px;
+      text-align: right;
+      margin-right: 5px; }
+    body #app #topApp #bodyRow #leftBody #massPanel #massPanelButtonsDiv {
+      margin-top: 12px;
+      margin-right: 15px; }
+      body #app #topApp #bodyRow #leftBody #massPanel #massPanelButtonsDiv #massPanelClearButton {
+        margin-left: 15px; }
+    body #app #topApp #bodyRow #leftBody #calculationPanel {
+      display: inline-flex; }
+      body #app #topApp #bodyRow #leftBody #calculationPanel #calculationPanelElements {
+        margin-left: 15px;
+        margin-bottom: 5px; }
+        body #app #topApp #bodyRow #leftBody #calculationPanel #calculationPanelElements .calculatableElement {
+          margin-right: 5px;
+          margin-left: 5px;
+          margin-bottom: 10px;
+          float: left;
+          width: 55px; }
+          body #app #topApp #bodyRow #leftBody #calculationPanel #calculationPanelElements .calculatableElement .elemNoParen .elemNoParenButton {
+            display: block;
+            border: none;
+            background: none;
+            margin-right: 9px;
+            margin-left: 9px;
+            padding: 0; }
+            body #app #topApp #bodyRow #leftBody #calculationPanel #calculationPanelElements .calculatableElement .elemNoParen .elemNoParenButton p {
+              font-size: 36px;
+              margin-bottom: 0; }
+              body #app #topApp #bodyRow #leftBody #calculationPanel #calculationPanelElements .calculatableElement .elemNoParen .elemNoParenButton p.activeElement {
+                color: red; }
+              body #app #topApp #bodyRow #leftBody #calculationPanel #calculationPanelElements .calculatableElement .elemNoParen .elemNoParenButton p.inactiveElement {
+                color: black; }
+          body #app #topApp #bodyRow #leftBody #calculationPanel #calculationPanelElements .calculatableElement .leftParen {
+            display: inline-block;
+            position: relative;
+            bottom: 15px; }
+            body #app #topApp #bodyRow #leftBody #calculationPanel #calculationPanelElements .calculatableElement .leftParen p {
+              margin: 0;
+              font-size: 60px; }
+          body #app #topApp #bodyRow #leftBody #calculationPanel #calculationPanelElements .calculatableElement .elemInParen {
+            display: inline-block; }
+          body #app #topApp #bodyRow #leftBody #calculationPanel #calculationPanelElements .calculatableElement .rightParenDiv {
+            display: inline-block;
+            position: relative;
+            bottom: 15px; }
+            body #app #topApp #bodyRow #leftBody #calculationPanel #calculationPanelElements .calculatableElement .rightParenDiv .rightParen {
+              display: inline-block; }
+              body #app #topApp #bodyRow #leftBody #calculationPanel #calculationPanelElements .calculatableElement .rightParenDiv .rightParen p {
+                margin: 0;
+                font-size: 60px; }
+            body #app #topApp #bodyRow #leftBody #calculationPanel #calculationPanelElements .calculatableElement .rightParenDiv .rightParenPM {
+              display: inline-block;
+              position: relative;
+              top: 30px; }
+              body #app #topApp #bodyRow #leftBody #calculationPanel #calculationPanelElements .calculatableElement .rightParenDiv .rightParenPM .pp-m {
+                display: block;
+                margin: auto;
+                padding: 0;
+                width: 15px;
+                height: 20px; }
+                body #app #topApp #bodyRow #leftBody #calculationPanel #calculationPanelElements .calculatableElement .rightParenDiv .rightParenPM .pp-m p {
+                  margin-bottom: 0;
+                  text-align: center; }
+              body #app #topApp #bodyRow #leftBody #calculationPanel #calculationPanelElements .calculatableElement .rightParenDiv .rightParenPM .parenMultiplier p {
+                margin: 0;
+                text-align: center; }
+          body #app #topApp #bodyRow #leftBody #calculationPanel #calculationPanelElements .calculatableElement .elementSelected {
+            padding: 0 5px 0 5px; }
+            body #app #topApp #bodyRow #leftBody #calculationPanel #calculationPanelElements .calculatableElement .elementSelected .p-m {
+              display: block;
+              margin: auto;
+              padding: 0;
+              width: 20px; }
+              body #app #topApp #bodyRow #leftBody #calculationPanel #calculationPanelElements .calculatableElement .elementSelected .p-m p {
+                margin-bottom: 0;
+                text-align: center; }
+            body #app #topApp #bodyRow #leftBody #calculationPanel #calculationPanelElements .calculatableElement .elementSelected .elemInParenAcronym p {
+              font-size: 25px;
+              margin-bottom: 0; }
+  body #app #topApp #bodyRow #rightBody {
+    float: right; }
+    body #app #topApp #bodyRow #rightBody #elementsPanelRow {
+      margin-top: 5px;
+      height: 418px; }
+      body #app #topApp #bodyRow #rightBody #elementsPanelRow .elementFoundButton {
+        border: 1px solid black;
         padding: 0;
-        width: 20px; }
-        #app #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .elementSelected .p-m p {
-          margin-bottom: 0;
+        background-color: #e0d4da;
+        padding-left: 15px;
+        padding-right: 15px; }
+        body #app #topApp #bodyRow #rightBody #elementsPanelRow .elementFoundButton:hover {
+          background-color: #d27aa6; }
+        body #app #topApp #bodyRow #rightBody #elementsPanelRow .elementFoundButton .elementFoundAtomicP {
+          margin: 0;
+          text-align: left; }
+        body #app #topApp #bodyRow #rightBody #elementsPanelRow .elementFoundButton h2 {
+          margin: 0;
           text-align: center; }
-      #app #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .elementSelected .elemInParenAcronym p {
-        font-size: 25px;
-        margin-bottom: 0; }
-  #app #topApp #bodyRow #rightBody #elementsPanelRow {
-    border-left: 1px solid black;
-    margin-top: 4px; }
-    #app #topApp #bodyRow #rightBody #elementsPanelRow .elementFoundButton {
-      border: 1px solid black;
-      border-left: none;
-      text-align: center;
-      padding: 0;
-      margin-bottom: 1px; }
+        body #app #topApp #bodyRow #rightBody #elementsPanelRow .elementFoundButton .elementFoundNameP {
+          margin: 0;
+          text-align: center; }
+        body #app #topApp #bodyRow #rightBody #elementsPanelRow .elementFoundButton .elementFoundMassP {
+          text-align: center; }
 
 /*# sourceMappingURL=allstyles.css.map*/
