--- a/src/public/allstyles.css
+++ b/src/public/allstyles.css
@@ -71,6 +71,29 @@ body #app #topApp #bodyRow {
       margin-right: 15px; }
       body #app #topApp #bodyRow #leftBody #massPanel #massPanelButtonsDiv #massPanelClearButton {
         margin-left: 15px; }
+    body #app #topApp #bodyRow #leftBody #massPanel #saveCompoundModal #saveCompoundModalDialog #saveCompoundModalContent #saveCompoundModalBody .row .col-sm-offset-2 #formInlineFormula .form-group #formulaToSave #formulaToSaveLabelDiv {
+      width: 65px; }
+      body #app #topApp #bodyRow #leftBody #massPanel #saveCompoundModal #saveCompoundModalDialog #saveCompoundModalContent #saveCompoundModalBody .row .col-sm-offset-2 #formInlineFormula .form-group #formulaToSave #formulaToSaveLabelDiv p {
+        text-align: right;
+        font-weight: bold;
+        margin-right: 5px; }
+    body #app #topApp #bodyRow #leftBody #massPanel #saveCompoundModal #saveCompoundModalDialog #saveCompoundModalContent #saveCompoundModalBody .row .col-sm-offset-2 #formInlineWeight .form-group #weightToSave {
+      display: flex; }
+      body #app #topApp #bodyRow #leftBody #massPanel #saveCompoundModal #saveCompoundModalDialog #saveCompoundModalContent #saveCompoundModalBody .row .col-sm-offset-2 #formInlineWeight .form-group #weightToSave #weightToSaveLabelDiv {
+        width: 65px; }
+        body #app #topApp #bodyRow #leftBody #massPanel #saveCompoundModal #saveCompoundModalDialog #saveCompoundModalContent #saveCompoundModalBody .row .col-sm-offset-2 #formInlineWeight .form-group #weightToSave #weightToSaveLabelDiv p {
+          text-align: right;
+          font-weight: bold;
+          margin-right: 5px; }
+    body #app #topApp #bodyRow #leftBody #massPanel #saveCompoundModal #saveCompoundModalDialog #saveCompoundModalContent #saveCompoundModalBody .row .col-sm-offset-2 #formInlineCompoundName #formGroupCompoundName {
+      display: flex; }
+      body #app #topApp #bodyRow #leftBody #massPanel #saveCompoundModal #saveCompoundModalDialog #saveCompoundModalContent #saveCompoundModalBody .row .col-sm-offset-2 #formInlineCompoundName #formGroupCompoundName div {
+        width: 65px; }
+        body #app #topApp #bodyRow #leftBody #massPanel #saveCompoundModal #saveCompoundModalDialog #saveCompoundModalContent #saveCompoundModalBody .row .col-sm-offset-2 #formInlineCompoundName #formGroupCompoundName div p {
+          text-align: right;
+          font-weight: bold;
+          margin-right: 5px;
+          margin-top: 5px; }
     body #app #topApp #bodyRow #leftBody #calculationPanel {
       display: inline-flex; }
       body #app #topApp #bodyRow #leftBody #calculationPanel #calculationPanelElements {
