--- a/src/assets/sass/mainstyles.scss
+++ b/src/assets/sass/mainstyles.scss
@@ -1,12 +1,3 @@
-
-
-
-
-
-
-
-
-
 body {
   img {
     position: absolute;
@@ -37,32 +28,25 @@ body {
   }
 
   #app {
-
     #topApp {
-
       #headRow {
-
         #headingDiv {
-
           h1 {
             text-align: center;
           }
         }
 
         #loginHeader {
-
           #emailFormGroup {
             margin-top: 10px;
 
             #emailTextInputDiv {
-
               #emailInput {
 
               }
             }
 
             #emailButtonInputDiv {
-
               #loginButton {
 
               }
@@ -70,16 +54,13 @@ body {
           }
 
           #passwordFormGroup {
-
             #passwordTextInputDiv {
-
               #passwordInput {
                 margin-top: 5px;
               }
             }
 
             #passwordButtonInputDiv {
-
               #registerButton {
 
               }
@@ -91,7 +72,6 @@ body {
           margin-top: 10px;
 
           #userAccountButtonsDiv {
-
             #myAccountButton {
 
             }
@@ -102,11 +82,8 @@ body {
           }
 
           #accountModal {
-
             #accountModalDialog {
-
               #accountModalContent {
-                
                 #accountModalHeader {
 
                   h3 {
@@ -119,13 +96,9 @@ body {
                 }
 
                 #accountModalBody {
-
                   #accountModalRow {
-
                     #accountModalForm {
-
                       #accountFormInlineName {
-
                         #accountFormGroupName {
                           display: flex;
                           margin-left: 35px;
@@ -141,26 +114,20 @@ body {
                       }
 
                       #accountFormInlineEmail {
-
                         #accountFormGroupEmail {
                           display: flex;
                           margin-left: 35px;
 
                           label {
-
                           }
-
                           p {
                             margin-left: 5px;
                           }
-
                         }
                       }
 
                       #accountFormInlineNewName {
-
                         #accountFormGroupNewName {
-
                           #accountFormNewNameInput {
                             margin-left: 5px;
                           }
@@ -168,26 +135,21 @@ body {
                       }
 
                       #accountFormInlineNewEmail {
-
                         #accountFormGroupNewEmail {
                           margin-top: 10px;
 
                           label {
 
                           }
-
                           #accountFormNewEmailInput {
                             margin-left: 5px;
                           }
-
                         }
-
                         #accountFormUpdateButton {
                           margin-left: 5px;
                           margin-top: 10px;
                         }
                       }
-
                     }
                   }
                 }
@@ -205,7 +167,6 @@ body {
             }
           }
         }
-
       }
 
       #bodyRow {
@@ -217,7 +178,6 @@ body {
           margin-left: 30px;
 
           #massPanel {
-
             #massPanelMolecularWeight {
 
               h3 {
@@ -270,6 +230,13 @@ body {
                                   text-align: right;
                                   font-weight: bold;
                                   margin-right: 5px;
+                                }
+                              }
+
+                              p {
+                                margin-right: 2px;
+                                span {
+
                                 }
                               }
                             }
