--- a/src/public/allstyles.css
+++ b/src/public/allstyles.css
@@ -73,36 +73,52 @@ body #app #topApp #bodyRow {
         margin-left: 15px; }
     body #app #topApp #bodyRow #leftBody #massPanel #saveCompoundModal #saveCompoundModalDialog #saveCompoundModalContent #saveCompoundModalHeader h3 {
       text-align: center; }
-    body #app #topApp #bodyRow #leftBody #massPanel #saveCompoundModal #saveCompoundModalDialog #saveCompoundModalContent #saveCompoundModalBody .row .col-sm-offset-2 #formInlineFormula .form-group #formulaToSave {
-      display: flex; }
-      body #app #topApp #bodyRow #leftBody #massPanel #saveCompoundModal #saveCompoundModalDialog #saveCompoundModalContent #saveCompoundModalBody .row .col-sm-offset-2 #formInlineFormula .form-group #formulaToSave #formulaToSaveLabelDiv {
-        width: 65px; }
-        body #app #topApp #bodyRow #leftBody #massPanel #saveCompoundModal #saveCompoundModalDialog #saveCompoundModalContent #saveCompoundModalBody .row .col-sm-offset-2 #formInlineFormula .form-group #formulaToSave #formulaToSaveLabelDiv p {
-          text-align: right;
-          font-weight: bold;
-          margin-right: 5px; }
-      body #app #topApp #bodyRow #leftBody #massPanel #saveCompoundModal #saveCompoundModalDialog #saveCompoundModalContent #saveCompoundModalBody .row .col-sm-offset-2 #formInlineFormula .form-group #formulaToSave p {
-        margin-right: 2px; }
-    body #app #topApp #bodyRow #leftBody #massPanel #saveCompoundModal #saveCompoundModalDialog #saveCompoundModalContent #saveCompoundModalBody .row .col-sm-offset-2 #formInlineWeight .form-group #weightToSave {
-      display: flex; }
-      body #app #topApp #bodyRow #leftBody #massPanel #saveCompoundModal #saveCompoundModalDialog #saveCompoundModalContent #saveCompoundModalBody .row .col-sm-offset-2 #formInlineWeight .form-group #weightToSave #weightToSaveLabelDiv {
-        width: 65px; }
-        body #app #topApp #bodyRow #leftBody #massPanel #saveCompoundModal #saveCompoundModalDialog #saveCompoundModalContent #saveCompoundModalBody .row .col-sm-offset-2 #formInlineWeight .form-group #weightToSave #weightToSaveLabelDiv p {
-          text-align: right;
-          font-weight: bold;
-          margin-right: 5px; }
-    body #app #topApp #bodyRow #leftBody #massPanel #saveCompoundModal #saveCompoundModalDialog #saveCompoundModalContent #saveCompoundModalBody .row .col-sm-offset-2 #formInlineCompoundName #formGroupCompoundName {
-      display: flex; }
-      body #app #topApp #bodyRow #leftBody #massPanel #saveCompoundModal #saveCompoundModalDialog #saveCompoundModalContent #saveCompoundModalBody .row .col-sm-offset-2 #formInlineCompoundName #formGroupCompoundName div {
-        width: 65px; }
-        body #app #topApp #bodyRow #leftBody #massPanel #saveCompoundModal #saveCompoundModalDialog #saveCompoundModalContent #saveCompoundModalBody .row .col-sm-offset-2 #formInlineCompoundName #formGroupCompoundName div p {
-          text-align: right;
-          font-weight: bold;
-          margin-right: 5px;
-          margin-top: 5px; }
-      body #app #topApp #bodyRow #leftBody #massPanel #saveCompoundModal #saveCompoundModalDialog #saveCompoundModalContent #saveCompoundModalBody .row .col-sm-offset-2 #formInlineCompoundName #formGroupCompoundName #compoundNameInput {
-        width: 210px;
-        margin-right: 10px; }
+    body #app #topApp #bodyRow #leftBody #massPanel #saveCompoundModal #saveCompoundModalDialog #saveCompoundModalContent #saveCompoundModalBody {
+      padding-bottom: 0; }
+      body #app #topApp #bodyRow #leftBody #massPanel #saveCompoundModal #saveCompoundModalDialog #saveCompoundModalContent #saveCompoundModalBody #saveCompoundModalTopRow .col-sm-offset-2 #formInlineFormula .form-group #formulaToSave {
+        display: flex; }
+        body #app #topApp #bodyRow #leftBody #massPanel #saveCompoundModal #saveCompoundModalDialog #saveCompoundModalContent #saveCompoundModalBody #saveCompoundModalTopRow .col-sm-offset-2 #formInlineFormula .form-group #formulaToSave #formulaToSaveLabelDiv {
+          width: 65px; }
+          body #app #topApp #bodyRow #leftBody #massPanel #saveCompoundModal #saveCompoundModalDialog #saveCompoundModalContent #saveCompoundModalBody #saveCompoundModalTopRow .col-sm-offset-2 #formInlineFormula .form-group #formulaToSave #formulaToSaveLabelDiv p {
+            text-align: right;
+            font-weight: bold;
+            margin-right: 5px; }
+        body #app #topApp #bodyRow #leftBody #massPanel #saveCompoundModal #saveCompoundModalDialog #saveCompoundModalContent #saveCompoundModalBody #saveCompoundModalTopRow .col-sm-offset-2 #formInlineFormula .form-group #formulaToSave p {
+          margin-right: 2px; }
+      body #app #topApp #bodyRow #leftBody #massPanel #saveCompoundModal #saveCompoundModalDialog #saveCompoundModalContent #saveCompoundModalBody #saveCompoundModalTopRow .col-sm-offset-2 #formInlineWeight .form-group #weightToSave {
+        display: flex; }
+        body #app #topApp #bodyRow #leftBody #massPanel #saveCompoundModal #saveCompoundModalDialog #saveCompoundModalContent #saveCompoundModalBody #saveCompoundModalTopRow .col-sm-offset-2 #formInlineWeight .form-group #weightToSave #weightToSaveLabelDiv {
+          width: 65px; }
+          body #app #topApp #bodyRow #leftBody #massPanel #saveCompoundModal #saveCompoundModalDialog #saveCompoundModalContent #saveCompoundModalBody #saveCompoundModalTopRow .col-sm-offset-2 #formInlineWeight .form-group #weightToSave #weightToSaveLabelDiv p {
+            text-align: right;
+            font-weight: bold;
+            margin-right: 5px; }
+      body #app #topApp #bodyRow #leftBody #massPanel #saveCompoundModal #saveCompoundModalDialog #saveCompoundModalContent #saveCompoundModalBody #saveCompoundModalTopRow .col-sm-offset-2 #formInlineCompoundName #formGroupCompoundName {
+        display: flex; }
+        body #app #topApp #bodyRow #leftBody #massPanel #saveCompoundModal #saveCompoundModalDialog #saveCompoundModalContent #saveCompoundModalBody #saveCompoundModalTopRow .col-sm-offset-2 #formInlineCompoundName #formGroupCompoundName div {
+          width: 65px; }
+          body #app #topApp #bodyRow #leftBody #massPanel #saveCompoundModal #saveCompoundModalDialog #saveCompoundModalContent #saveCompoundModalBody #saveCompoundModalTopRow .col-sm-offset-2 #formInlineCompoundName #formGroupCompoundName div p {
+            text-align: right;
+            font-weight: bold;
+            margin-right: 5px;
+            margin-top: 5px; }
+        body #app #topApp #bodyRow #leftBody #massPanel #saveCompoundModal #saveCompoundModalDialog #saveCompoundModalContent #saveCompoundModalBody #saveCompoundModalTopRow .col-sm-offset-2 #formInlineCompoundName #formGroupCompoundName #compoundNameInput {
+          width: 210px;
+          margin-right: 10px; }
+      body #app #topApp #bodyRow #leftBody #massPanel #saveCompoundModal #saveCompoundModalDialog #saveCompoundModalContent #saveCompoundModalBody #saveCompoundModalBottomRow .savedCompoundOuterDiv {
+        display: flex;
+        margin-left: 15px;
+        margin-right: 15px; }
+        body #app #topApp #bodyRow #leftBody #massPanel #saveCompoundModal #saveCompoundModalDialog #saveCompoundModalContent #saveCompoundModalBody #saveCompoundModalBottomRow .savedCompoundOuterDiv .col-sm-9 .savedFormula {
+          display: flex; }
+          body #app #topApp #bodyRow #leftBody #massPanel #saveCompoundModal #saveCompoundModalDialog #saveCompoundModalContent #saveCompoundModalBody #saveCompoundModalBottomRow .savedCompoundOuterDiv .col-sm-9 .savedFormula p {
+            margin-right: 2px; }
+        body #app #topApp #bodyRow #leftBody #massPanel #saveCompoundModal #saveCompoundModalDialog #saveCompoundModalContent #saveCompoundModalBody #saveCompoundModalBottomRow .savedCompoundOuterDiv .pull-right {
+          display: flex;
+          height: 30px;
+          margin-top: 20px; }
+          body #app #topApp #bodyRow #leftBody #massPanel #saveCompoundModal #saveCompoundModalDialog #saveCompoundModalContent #saveCompoundModalBody #saveCompoundModalBottomRow .savedCompoundOuterDiv .pull-right .btn-danger {
+            margin-left: 10px; }
     body #app #topApp #bodyRow #leftBody #calculationPanel {
       display: inline-flex; }
       body #app #topApp #bodyRow #leftBody #calculationPanel #calculationPanelElements {
